Fix scrollbar styling bug, update README

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -33,17 +33,17 @@
     width: 314px;
 }
 
-::-webkit-scrollbar {
+*::-webkit-scrollbar {
     width: 6px;
     height: 6px;
     background-color: transparent;
 }
 
-::-webkit-scrollbar-corner {
+*::-webkit-scrollbar-corner {
     background-color: rgba(0, 0, 0, 0.02);
 }
 
-::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {    
     -webkit-border-radius: 18px;
     background-color: theme('colors.gray.300');
 }
